--- a/index.html
+++ b/index.html
@@ -12,21 +12,33 @@
 
 <body>
 
-    <nav>
+        <nav>
+            <div class="inner-nav container flex-row">
+                <div id="logo"></div>
+                <div id="search-bar">
+                    <ul class="search-list flex-row">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div id="login"></div>
+            </div>
+        </nav>
 
-    </nav>
+        <header>
 
-    <header>
+        </header>
 
-    </header>
+        <main>
 
-    <main>
+        </main>
 
-    </main>
+        <footer>
 
-    <footer>
-
-    </footer>
+        </footer>
 
 </body>
 
