header styling + adjustments nav bar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <div class="inner-nav container flex-row">
                 <div id="logo"></div>
-                <div id="search-bar">
-                    <ul class="search-list flex-row">
+                <div id="links-bar">
+                    <ul class="flex-row">
                         <li></li>
                         <li></li>
                         <li></li>
@@ -29,7 +29,14 @@
         </nav>
 
         <header>
-
+            <div class="inner-header container flex-column">
+                <h1></h1>
+                <p></p>
+                <div class="buttons flex-row">
+                    <div id="download-button"></div>
+                    <div id="open-button"></div>
+                </div>
+            </div>
         </header>
 
         <main>
