main section styling

--- a/index.html
+++ b/index.html
@@ -41,6 +41,42 @@
 
         <main>
 
+            <div class="container">
+
+                <section class="site-desc">
+                    <img src="" alt="">
+                    <div class="flex-column">                
+                        <h2></h2>
+                        <aside></aside>
+                    </div>
+                </section>
+
+                <section class="site-desc">
+                    <div class="flex-column">                
+                        <h2></h2>
+                        <aside></aside>
+                    </div>
+                    <img src="" alt="">
+                </section>
+
+                <section class="site-desc">
+                    <img src="" alt="">
+                    <div class="flex-column">                
+                        <h2></h2>
+                        <aside></aside>
+                    </div>
+                </section>
+
+                <section class="site-desc-end"> 
+                    <h2></h2>
+                    <p></p>
+                    <img src="" alt="">  
+                    <h3></h3>
+                    <div id="mac-download-button"></div>
+                </section>
+
+            </div>
+
         </main>
 
         <footer>
