--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav>
             <div class="inner-nav container flex-row">
-                <div id="logo"></div>
+                <div id="logo-top"></div>
                 <div id="links-bar">
                     <ul class="flex-row">
                         <li></li>
@@ -41,7 +41,7 @@
 
         <main>
 
-            <div class="container">
+            <div class="container flex-column">
 
                 <section class="site-desc">
                     <img src="" alt="">
@@ -80,7 +80,67 @@
         </main>
 
         <footer>
+            <div class="container">
+                <section class="flex-footer">
+                    <div id="Contatti" class="footer-lists">
+                        <h4>aaaa</h4>
+                        <div id="language">aaaa</div>
+                        <div id="social">aaaa</div>
+                    </div>
+                    <div id="Prodotto" class="footer-lists">
+                        <h5></h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div id="Compagnia" class="footer-lists">
+                        <h5></h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div id="Risorse" class="footer-lists">
+                        <h5></h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        <li></li>
+                        </ul>
+                    </div>
+                    <div id="Norme" class="footer-lists">
+                        <h5></h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </section>
 
+                <section id="page-end" class="flex-row">
+                    <div id="logo-bottom"></div>
+                    <div id="sign-up"></div>
+                </section>
+
+            </div>         
+            
         </footer>
 
 </body>
