flex-wrap added in footer

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <div class="container">
                 <section class="flex-footer">
                     <div id="Contatti" class="footer-lists">
-                        <h4>aaaa</h4>
-                        <div id="language">aaaa</div>
-                        <div id="social">aaaa</div>
+                        <h4></h4>
+                        <div id="language"></div>
+                        <div id="social"></div>
                     </div>
                     <div id="Prodotto" class="footer-lists">
                         <h5></h5>
